<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:background="#FFF"  >

    <TextView
        android:id="@+id/itemid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/inner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center_vertical|center"
            android:contentDescription="@string/app_name"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/iconcircle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/icon"
            android:layout_toEndOf="@+id/icon" >

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/list_title"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:textSize="20sp"  />

                <TextView
                    android:id="@+id/dates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/timeago"
                    android:textColor="#C78500"
                    android:textSize="12sp" />

            </TableRow>

            <TextView
                android:id="@+id/extra"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/list_extra"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="#000"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/list_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="#000"
                android:textSize="16sp"/>

        </LinearLayout>
    </RelativeLayout>
</LinearLayout>